[gd_scene load_steps=2 format=3 uid="uid://cs3xlnrhlcwxe"]

[ext_resource type="Script" uid="uid://ds2gb0ljdlpbp" path="res://scripts/interface/MinimapUI.gd" id="1_ln6qn"]

[node name="MinimapUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ln6qn")

[node name="MinimapContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="MinimapSubview" type="SubViewport" parent="MinimapContainer"]
handle_input_locally = false
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="MinimapCamera" type="Camera2D" parent="MinimapContainer/MinimapSubview"]
position = Vector2(200, 200)
zoom = Vector2(0.1, 0.1)
